dark mode fixed made to products page.

--- a/styles/main.css
+++ b/styles/main.css
@@ -422,7 +422,7 @@ svg {
 }
 
 .divider-style span {
-    background: rgba(255, 255, 255, 0.5);
+    background: white;
     border-radius: 15px;
     backdrop-filter: blur(10px);
     padding: 0 20px;
